# swagger_server/controllers/zones_controller.py
@@ -1,28 +1,0 @@
-import connexion
-import six
-
-from swagger_server import util
-
-
-def get_zones():  # noqa: E501
-    """get_zones
-
-     # noqa: E501
-
-
-    :rtype: List[str]
-    """
-    return 'do some magic!'
-
-
-def quiet_zone(zone_id):  # noqa: E501
-    """quiet_zone
-
-     # noqa: E501
-
-    :param zone_id: 
-    :type zone_id: str
-
-    :rtype: None
-    """
-    return 'do some magic!'
