# swagger_server/models/image_info.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class ImageInfo(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, aaa: str=None, bbb: str=None):  # noqa: E501
+        """ImageInfo - a model defined in Swagger
+
+        :param aaa: The aaa of this ImageInfo.  # noqa: E501
+        :type aaa: str
+        :param bbb: The bbb of this ImageInfo.  # noqa: E501
+        :type bbb: str
+        """
+        self.swagger_types = {
+            'aaa': str,
+            'bbb': str
+        }
+
+        self.attribute_map = {
+            'aaa': 'aaa',
+            'bbb': 'bbb'
+        }
+        self._aaa = aaa
+        self._bbb = bbb
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ImageInfo':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ImageInfo of this ImageInfo.  # noqa: E501
+        :rtype: ImageInfo
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def aaa(self) -> str:
+        """Gets the aaa of this ImageInfo.
+
+
+        :return: The aaa of this ImageInfo.
+        :rtype: str
+        """
+        return self._aaa
+
+    @aaa.setter
+    def aaa(self, aaa: str):
+        """Sets the aaa of this ImageInfo.
+
+
+        :param aaa: The aaa of this ImageInfo.
+        :type aaa: str
+        """
+
+        self._aaa = aaa
+
+    @property
+    def bbb(self) -> str:
+        """Gets the bbb of this ImageInfo.
+
+
+        :return: The bbb of this ImageInfo.
+        :rtype: str
+        """
+        return self._bbb
+
+    @bbb.setter
+    def bbb(self, bbb: str):
+        """Sets the bbb of this ImageInfo.
+
+
+        :param bbb: The bbb of this ImageInfo.
+        :type bbb: str
+        """
+
+        self._bbb = bbb
